// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Include433 /> Should initiateAdd433MHz and show activity indicator 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;

exports[`<Include433 /> on error with container component Should initiateAdd433MHz and show error screen with container, also call deleteSocketAndTimer when unmount 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#eeeeee",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 0,
          "marginTop": 0,
          "width": 0,
        }
      }
    />
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "flex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "height": 15.5,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "telldus_header_bg",
              }
            }
            style={
              Array [
                Object {
                  "height": 313,
                  "tintColor": undefined,
                  "width": 750,
                },
                Object {
                  "marginTop": -2,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "transparent",
                    "flex": 0,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginRight": 12.4,
                    "width": 80,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "borderRadius": 2,
            "elevation": 2,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 1.38885,
            "padding": 2.7777,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2,
          },
          Array [
            Object {
              "flex": 0,
              "marginBottom": 1.38885,
              "marginHorizontal": 2.7777,
            },
            Object {
              "marginVertical": 2.7777,
            },
          ],
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          importantForAccessibility="yes"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000000",
                "fontFamily": "telldusicons",
                "fontSize": 14.000000000000002,
              },
              Object {
                "color": "#D32F2E",
              },
            ]
          }
        >
          info
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#555555",
                "flex": 1,
                "flexWrap": "wrap",
                "fontFamily": "SuisseIntl",
                "fontSize": 4.2,
                "marginLeft": 2.7777,
              },
              Object {
                "fontSize": 3.5000000000000004,
              },
            ]
          }
        >
          Error when add device 433MHz failed
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Include433 /> on success with container component Should initiateAdd433MHz and show success screen with container, also call deleteSocketAndTimer when unmount 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#eeeeee",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 0,
          "marginTop": 0,
          "width": 0,
        }
      }
    />
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "flex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "height": 15.5,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "telldus_header_bg",
              }
            }
            style={
              Array [
                Object {
                  "height": 313,
                  "tintColor": undefined,
                  "width": 750,
                },
                Object {
                  "marginTop": -2,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "transparent",
                    "flex": 0,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginRight": 12.4,
                    "width": 80,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
            "paddingVertical": 2.7777,
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f5f5f5",
                  "borderRadius": 2,
                  "elevation": 2,
                  "marginBottom": 4.3471005,
                  "marginHorizontal": 8.694201,
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.23,
                  "shadowRadius": 2,
                  "width": 732.611598,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "stretch",
                    "backgroundColor": "transparent",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "transparent",
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingVertical": 30.048,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderRightColor": "transparent",
                      "borderRightWidth": 15.65,
                      "borderStyle": "solid",
                      "borderTopColor": "#80919E",
                      "borderTopLeftRadius": 2,
                      "borderTopWidth": 50.08,
                      "height": 0,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 62.6,
                    }
                  }
                />
                <Text
                  allowFontScaling={false}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#fff",
                      "fontFamily": "SuisseIntl",
                      "fontSize": 15.65,
                      "left": 18.779999999999998,
                      "position": "absolute",
                      "top": 3.13,
                    }
                  }
                >
                  1.
                </Text>
                <View
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "height": 0,
                      "width": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "transparent",
                    "justifyContent": "center",
                    "paddingHorizontal": 8.694201,
                    "paddingVertical": 17.388402,
                    "width": 555,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#8e8e93",
                      "flexWrap": "wrap",
                      "fontFamily": "SuisseIntl",
                      "fontSize": 10.955000000000002,
                    }
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#8e8e93",
                    "fontFamily": "SuisseIntl",
                    "fontSize": 3,
                    "marginBottom": 4,
                  }
                }
              >
                (0% )
              </Text>
              <View
                colorScheme="light"
                dark={false}
                selectedThemeSet={
                  Object {
                    "key": 2,
                    "value": "Fred on vacation",
                  }
                }
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#cccccc",
                      "borderColor": "transparent",
                      "borderRadius": 4,
                      "borderWidth": 0,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 88.8892,
                    },
                    Object {
                      "marginBottom": 2.7777,
                    },
                  ]
                }
                themeInApp="OS"
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#9C7D69",
                      "height": 4,
                      "transform": Array [
                        Object {
                          "translateX": -3.552713678800501e-15,
                        },
                        Object {
                          "translateX": -44.44015554,
                        },
                        Object {
                          "scaleX": 0.0001,
                        },
                      ],
                      "width": 88.8892,
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f5f5f5",
                  "borderRadius": 2,
                  "elevation": 2,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 1.38885,
                  "padding": 2.7777,
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": 0,
                  },
                  "shadowOpacity": 0.23,
                  "shadowRadius": 2,
                },
                Object {
                  "flex": 0,
                  "marginBottom": 1.38885,
                  "marginHorizontal": 2.7777,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                importantForAccessibility="yes"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontFamily": "telldusicons",
                      "fontSize": 14.000000000000002,
                    },
                    undefined,
                  ]
                }
              >
                info
              </Text>
            </View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "flex": 1,
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#555555",
                      "flex": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "SuisseIntl",
                      "fontSize": 4.2,
                      "marginLeft": 2.7777,
                    },
                    Object {
                      "fontSize": 3.5000000000000004,
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`<Include433 /> with container component Should initiateAdd433MHz and show activity indicator with container 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#eeeeee",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 0,
          "marginTop": 0,
          "width": 0,
        }
      }
    />
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "flex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "height": 15.5,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "telldus_header_bg",
              }
            }
            style={
              Array [
                Object {
                  "height": 313,
                  "tintColor": undefined,
                  "width": 750,
                },
                Object {
                  "marginTop": -2,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "transparent",
                    "flex": 0,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginRight": 12.4,
                    "width": 80,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="large"
      />
    </View>
  </View>
</View>
`;
